# GCOWIN32

./: CMakeLists.txt  LICENSE  README.md
include/: GCO.h  GCODEF.h  OpenDialogBox.h  manageFont.h  manageProjet.h  myCreateWindow.h  mystrtok.h  resource.h  toolBar.h
resources/: 1.gco  GCO.rc  defcol.txt  mf.txt  projetManagement.rc  resource.rc  style.txt  toolbar.rc
src/: CacheManagment.c  DialogProc.c  DisplayTuto.c  MyChildProcDlgButton.c  MyChildProcDlgComboBox.c  MyChildProcDlgDialogBox.c  MyChildProcDlgEditBox.c  MyChildProcDlgGroupBox.c  MyChildProcDlgListBox.c  MyChildProcDlgStatic.c  MyLoadBorderOpt.c  MyManageCheckStyle.c  MyManageColor.c  MyManageFont.c  MyManageMenu.c  MyParentProcObj.c  MyRegisterOtherClass.c  MyTestProje.c  NewObjWndProc.c  OpenDialogBox.c  OpenDlg_button.c  OpenDlg_choosetypeobj.c  OpenDlg_combobox.c  OpenDlg_dlgbox.c  OpenDlg_editbox.c  OpenDlg_listbox.c  OpenDlg_static.c  OpenMenuDialogBox.c  main.c  myCreateWindow.c  mystrtok.c  popfile.c  projetManagement.c  toolBar.c
